organize the code according to SOLID principles, implement todo methods

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
 <body>
     <h1>Organize your life for peace of mind</h1>
-    <div class="toDoContainer"></div>
+    <div class="todosContainer">
+        <h2 class="categoryName"></h2>
+        <div class="categoryToDos"></div>
+    </div>
 </body>
 
 </html>
