--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <div class="todosContainer">
         <h2 class="categoryName"></h2>
         <div class="categoryToDos"></div>
-        <button id="addToDoBtn" type="button">Add a new todo</button>
     </div>
 
 
@@ -34,16 +33,16 @@
                 <textarea id="todoDesc"></textarea>
             </div>
             <div class="modal-items">
-                <label for="dueDate"><span class="required">*</span>Due date: </label>
-                <input type="date" id="dueDate" required>
+                <label for="todoDueDate"><span class="required">*</span>Due date: </label>
+                <input type="date" id="todoDueDate" required>
             </div>
             <div class="modal-items">
-                <label for="priority">Priority: </label>
-                <input type="number" id="priority">
+                <label for="todoPriority">Priority: </label>
+                <input type="number" id="todoPriority">
             </div>
             <div class="modal-items">
-                <label for="notes">Notes: </label>
-                <textarea id="notes"></textarea>
+                <label for="todoNotes">Notes: </label>
+                <textarea id="todoNotes"></textarea>
             </div>
             <div class="haveReadTHisBook">
                 <input type="checkbox" id="todoIsCompleted">
