allow user to change the category of a todo

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
                     <option value="work">Work</option>
                     <option value="life">Life</option>
                     <option value="education">Education</option>
+                    <option id="oldCategory"></option>
+                    <option id="oldCategoryIdentifier"></option>
                 </select>
                 <button type="button" id="createNewCatBtn">Create new category</button>
             </div>
