handle 'old category' issue in add new todo event

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="modal-items">
                 <label for="todoDueDate"><span class="required">*</span>Due date: </label>
-                <input type="date" id="todoDueDate" required>
+                <input type="datetime-local" id="todoDueDate" required>
             </div>
             <div class="modal-items">
                 <label for="todoPriority">Priority: </label>
@@ -57,8 +57,8 @@
                     <option value="work">Work</option>
                     <option value="life">Life</option>
                     <option value="education">Education</option>
-                    <option id="oldCategory"></option>
-                    <option id="oldCategoryIdentifier"></option>
+                    <!-- <option id="oldCategory"></option>
+                    <option id="oldCategoryIdentifier"></option> -->
                 </select>
                 <button type="button" id="createNewCatBtn">Create new category</button>
             </div>
