bundle imported date-fns lib with webpack

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-do list App</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <title>Todo App - Get stuff done</title>
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <!-- <script type="module" src="script.js" defer></script> -->
+     <!-- <script src="dist/main.js"></script> -->
 </head>
 
 <body>
