give user the ability to mark a todo as completed

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,14 @@
 </head>
 
 <body>
-    <h1>Organize your life for peace of mind</h1>
+    <div class="topMenu">
+        <h1>Organize your life for peace of mind</h1>
+        <button type="button" id="completedToDosCatBtn" class="missedCompletedTodosBtns">Completed Todos</button>
+        <button type="button" id="missedToDosCatBtn" class="missedCompletedTodosBtns">Missed Todos</button>
+    </div>
     <nav>
         <ul class="mainMenu">
-            <li><button type="button" class="addNewToDoBtnMain">Add new Todo</button></li>
+            <li><button type="button" class="addNewToDoBtnMain">+ Add new Todo</button></li>
         </ul>
     </nav>
     <div class="todosContainer">
